<resources>
    <string name="app_name">#MeToo but I am no celebrity, so do I count?</string>
    <string name="action_settings">Settings</string>
    <string name="title">#MeToo But I am muted</string>
    <string name="question1">What happened?</string>
    <string name="question2">How did you feel?</string>
    <string name="age">How old are you?</string>
    <string name="gender">Are you a girl</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="btn_text">Report</string>
    <string name="MyAge"></string>
    <string name="question3">Did this happen at home?</string>
    <string name="title_activity_maps">Where are you?</string>
    <string name="rationale">We ask for your location so that we can document areas where problems exists. Our purpose is to raise awareness so that we can influence mass action with or without government support. Rest assured, we will not share your exact address with anyone.</string>
</resources>

