<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_red_dark"
    android:backgroundTintMode="screen"
    android:minHeight="20dp"
    android:minWidth="20dp"

    android:fontFamily="casual"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.forrealpeople.metoo.metoo.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Title"
        android:textAlignment="center"
        android:elegantTextHeight="true"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@id/question1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/question1"
        android:textAlignment="center"

        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="8dp"

        android:text="@string/question1"
        android:visibility="visible"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/spinner_wh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Spinner
        android:id="@+id/spinner_wh"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/feel"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question1"
        app:layout_constraintVertical_bias="0.017" />


    <TextView
        android:id="@+id/feel"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/question2"
        android:textAppearance="@style/TextAppearance.AppCompat"

        android:textColorLink="@android:color/holo_red_light"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spin_how"

        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_wh" />

    <Spinner
        android:id="@+id/spin_how"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/old"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feel" />

    <TextView
        android:id="@+id/old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:text="@string/age"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/myAge"
        app:layout_constraintTop_toBottomOf="@+id/spin_how" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"

        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/girl"
        app:layout_constraintTop_toBottomOf="@+id/old" />

    <EditText
        android:id="@+id/myAge"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_marginLeft="4dp"

        android:layout_marginRight="8dp"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/MyAge"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/girl"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/old"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_how" />

    <CheckBox
        android:id="@+id/girl"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_marginRight="100dp"

        android:checked="true"

        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/gender"

        app:layout_constraintRight_toRightOf="@id/Report"
        app:layout_constraintTop_toBottomOf="@+id/myAge" />

    <Button
        android:id="@+id/Report"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/girl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myAge"
        app:layout_constraintVertical_bias="0.474" />

</android.support.constraint.ConstraintLayout>
